inclundo jobs, debug e alertas

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ env:
 on:
   push:
     branches:
-      - main
+      - ci/setup
   pull_request:
     branches:
-      - main
+      - ci/setup
 
 jobs:
   validate:
