--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  PROD_DOMAIN: ${{ environments.production.vars.PROD_DOMAIN }}
-
 jobs:
   deploy:
     name: Deploy
@@ -16,4 +13,4 @@ jobs:
       name: production
     steps:
       - name: Simulate Deploy
-        run: echo "Deploying to $PROD_DOMAIN"
+        run: echo "Deploying to ${{ vars.PROD_DOMAIN || secrets.PROD_DOMAIN }}"
