--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,44 +11,32 @@ on:
 
 jobs:
   validate:
-    name: Validate Syntax
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - run: |
-          if ! bash -n status-check.sh; then
-            echo "::error::Syntax error in script"
-            exit 1
-          fi
+      - run: bash -n status-check.sh || { echo "::error::Syntax error"; exit 1; }
 
   test:
-    name: Run Tests
     runs-on: ubuntu-latest
     needs: validate
     steps:
-      - uses: actions/checkout@v3
       - run: |
-          echo "::warning::Simulated tests - implement real tests"
+          echo "::warning::Simulated tests"
           echo "Running tests" && exit 0
 
   package:
-    name: Package Artifact
     runs-on: ubuntu-latest
     needs: test
     steps:
-      - uses: actions/checkout@v3
       - run: |
           echo "Test Results: PASS" > report.txt
           zip report.zip report.txt
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: test-report
           path: report.zip
       - run: |
-          echo "## CI Summary [View full logs]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID)" >> $GITHUB_STEP_SUMMARY
-          echo "**OS:** ${{ runner.os }} | **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Artifact:** [Download report]($GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts)" >> $GITHUB_STEP_SUMMARY
-          echo "**Jobs:**" >> $GITHUB_STEP_SUMMARY
-          echo "- Validate: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Test: ${{ needs.test.result }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Package: ${{ job.status }}" >> $GITHUB_STEP_SUMMARY
+          echo "## CI Summary" >> $GITHUB_STEP_SUMMARY
+          echo "OS: ${{ runner.os }}" >> $GITHUB_STEP_SUMMARY
+          echo "Branch: ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+          echo "Artifact: [Download](https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID/artifacts)" >> $GITHUB_STEP_SUMMARY
