--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,11 @@ name: Deploy to Production
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   deploy:
-    name: Deploy
     runs-on: ubuntu-latest
-    environment:
-      name: production
+    environment: production
     steps:
-      - name: Simulate Deploy
-        run: echo "Deploying to ${{ vars.PROD_DOMAIN || secrets.PROD_DOMAIN }}"
+      - run: echo "Deploying to appmonitor.com"
